# ChangeLog for net-misc/memcached
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.50 2007/10/23 10:57:34 flameeyes Exp $

  23 Oct 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/memcached-1.2.2-fbsd.patch, memcached-1.2.2.ebuild:
  Add patch to build on Gentoo/FreeBSD.

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> memcached-1.2.1-r1.ebuild:
  Stable on ppc64

  11 Oct 2007; Jeroen Roovers <jer@gentoo.org> memcached-1.2.1-r1.ebuild:
  Stable for HPPA (drac) and fixed quoting issues caught by repoman.

*memcached-1.2.2 (24 Sep 2007)

  24 Sep 2007; Samuli Suominen <drac@gentoo.org> +memcached-1.2.2.ebuild:
  Version bump for bug 177787, thanks to Brian Moon for reporting.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  memcached-1.2.1-r1.ebuild:
  ppc. stable

  27 Jul 2007; Raúl Porcel <armin76@gentoo.org> memcached-1.2.1-r1.ebuild:
  alpha stable

  24 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  memcached-1.2.1-r1.ebuild:
  Stable on sparc

  28 Apr 2007; Sven Wegener <swegener@gentoo.org> memcached-1.1.11.ebuild,
  memcached-1.1.12.ebuild, memcached-1.1.12-r1.ebuild,
  memcached-1.1.12-r2.ebuild, memcached-1.1.12-r3.ebuild,
  memcached-1.1.13_pre.ebuild, memcached-1.1.13.ebuild,
  memcached-1.2.1.ebuild:
  Fix *initd, *confd and *envd calls (#17388, #174266)

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> memcached-1.2.1-r1.ebuild:
  ia64 + x86 stable and fix typo

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> memcached-1.1.13.ebuild:
  Stable on ppc64

*memcached-1.2.1-r1 (31 Mar 2007)
*memcached-1.1.13-r1 (31 Mar 2007)

  31 Mar 2007; Robin H. Johnson <robbat2@gentoo.org> +files/1.1.13/conf,
  +files/1.1.13/init, +memcached-1.1.13-r1.ebuild,
  +memcached-1.2.1-r1.ebuild:
  Fix start-stop-daemon looking at the binary instead of the pidfile when
  using multiple instances of memcached.

  22 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>