@@ -1,0 +1,3 @@
+MD5 a08851f7fa7b15e92ee6320b7a79c321 memcached-1.2.2.tar.gz 166201
+RMD160 78dd094efb9b17a5e80a631690b929b3a4427854 memcached-1.2.2.tar.gz 166201
+SHA256 8dbaedb88b8f9c61b977cf6e670bb3b0f172c357169ccba1c8362230bfdc7cf7 memcached-1.2.2.tar.gz 166201
