@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/memcached
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.50 2007/10/23 10:57:34 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.51 2007/11/18 14:22:04 robbat2 Exp $
+
+*memcached-1.2.2-r1 (18 Nov 2007)
+
+  18 Nov 2007; Robin H. Johnson <robbat2@gentoo.org>
+  +memcached-1.2.2-r1.ebuild:
+  Install the memcached-tool utillity, for managing memory slabs in memcached.
 
   23 Oct 2007; Diego Pettenò <flameeyes@gentoo.org>
   +files/memcached-1.2.2-fbsd.patch, memcached-1.2.2.ebuild:
